# MuSicX

./: .gitignore  AGENTS.md  PR_DRAFT.md  README.md  SPOTIFY_MAIN_INTEGRATION.patch  SPOTIFY_MAIN_INTEGRATION_NOTES.md  album-log.txt  changelog.md  metrolist-log.txt  settings.gradle.kts
.github/: FUNDING.yml
.github/workflows/: build.yml  build_pr.yml  build_quick.yml  nightly.yml  release.yml  sync-player-configs.yml  sync-upstream-metrolist-fixed.yml  sync-upstream-metrolist.yml  sync-zemer.yml
app/: build.gradle.kts  proguard-rules.pro
app/schemas/com.metrolist.music.db.InternalDatabase/: 38.json  39.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/: player_configs.json  player_dates.json
app/src/main/cpp/: CMakeLists.txt  discord_bridge.cpp  discord_bridge.h
app/src/main/cpp/include/: cdiscord.h  discordpp.h
betterlyrics/: build.gradle.kts
discordrpc/: build.gradle.kts
fastlane/metadata/android/bn/: full_description.txt  short_description.txt
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/fil/: full_description.txt
fastlane/metadata/android/gl-ES/: full_description.txt  short_description.txt
fastlane/metadata/android/pt-BR/: full_description.txt
fastlane/metadata/android/ru-RU/: full_description.txt
gradle/: libs.versions.toml
innertube/: build.gradle.kts
kugou/: build.gradle.kts
lastfm/: build.gradle.kts
listenbrainz/: build.gradle.kts
lrclib/: build.gradle.kts
paxsenix/: build.gradle.kts
shazamkit/: build.gradle.kts
(+608 files in other folders)
